@@ -6,8 +6,11 @@ import it.unimi.dsi.fastutil.objects.ObjectArrayList;
 import net.minecraft.advancements.CriteriaTriggers;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
+import net.minecraft.core.HolderLookup;
+import net.minecraft.core.registries.Registries;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.protocol.game.ClientboundBlockEntityDataPacket;
+import net.minecraft.resources.ResourceKey;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.ServerPlayer;
@@ -26,6 +29,7 @@ import net.minecraft.world.level.storage.loot.LootTable;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParams;
 import net.minecraft.world.phys.Vec3;
+import org.jetbrains.annotations.NotNull;
 
 import javax.annotation.Nullable;
 import java.util.Objects;
@@ -46,7 +50,7 @@ public class SuspiciousAncientSandBlockEntity extends BlockEntity {
     @Nullable
     private Direction hitDirection;
     @Nullable
-    private ResourceLocation lootTable;
+    private ResourceKey<LootTable> lootTable;
     private long lootTableSeed;
 
     public SuspiciousAncientSandBlockEntity(BlockPos $$0, BlockState $$1) {
@@ -71,7 +75,7 @@ public class SuspiciousAncientSandBlockEntity extends BlockEntity {
                 int $$4 = this.getCompletionState();
                 if ($$3 != $$4) {
                     BlockState $$5 = this.getBlockState();
-                    BlockState $$6 = $$5.setValue(BlockStateProperties.DUSTED, Integer.valueOf($$4));
+                    BlockState $$6 = $$5.setValue(BlockStateProperties.DUSTED, $$4);
                     this.level.setBlock(this.getBlockPos(), $$6, 3);
                 }
 
@@ -84,7 +88,7 @@ public class SuspiciousAncientSandBlockEntity extends BlockEntity {
 
     public void unpackLootTable(Player $$0) {
         if (this.lootTable != null && this.level != null && !this.level.isClientSide() && this.level.getServer() != null) {
-            LootTable $$1 = this.level.getServer().getLootData().getLootTable(this.lootTable);
+            LootTable $$1 = this.level.getServer().reloadableRegistries().getLootTable(this.lootTable);
             if ($$0 instanceof ServerPlayer $$2) {
                 CriteriaTriggers.GENERATE_LOOT.trigger($$2, this.lootTable);
             }
@@ -98,10 +102,10 @@ public class SuspiciousAncientSandBlockEntity extends BlockEntity {
 
             this.item = switch ($$4.size()) {
                 case 0 -> ItemStack.EMPTY;
-                case 1 -> (ItemStack) $$4.get(0);
+                case 1 -> $$4.getFirst();
                 default -> {
                     YungsCaveBiomesCommon.LOGGER.warn("Expected max 1 loot from loot table {} got {}", this.lootTable, $$4.size());
-                    yield $$4.get(0);
+                    yield $$4.getFirst();
                 }
             };
             this.lootTable = null;
@@ -129,7 +133,7 @@ public class SuspiciousAncientSandBlockEntity extends BlockEntity {
         if (this.level != null && this.level.getServer() != null) {
             this.unpackLootTable($$0);
             if (!this.item.isEmpty()) {
-                double $$1 = (double) EntityType.ITEM.getWidth();
+                double $$1 = EntityType.ITEM.getWidth();
                 double $$2 = 1.0 - $$1;
                 double $$3 = $$1 / 2.0;
                 Direction $$4 = Objects.requireNonNullElse(this.hitDirection, Direction.UP);
@@ -152,7 +156,7 @@ public class SuspiciousAncientSandBlockEntity extends BlockEntity {
                 this.brushCount = Math.max(0, this.brushCount - 2);
                 int $$1 = this.getCompletionState();
                 if ($$0 != $$1) {
-                    this.level.setBlock(this.getBlockPos(), this.getBlockState().setValue(BlockStateProperties.DUSTED, Integer.valueOf($$1)), 3);
+                    this.level.setBlock(this.getBlockPos(), this.getBlockState().setValue(BlockStateProperties.DUSTED, $$1), 3);
                 }
 
                 int $$2 = 4;
@@ -169,10 +173,10 @@ public class SuspiciousAncientSandBlockEntity extends BlockEntity {
         }
     }
 
-    private boolean tryLoadLootTable(CompoundTag $$0) {
-        if ($$0.contains(LOOT_TABLE_TAG, 8)) {
-            this.lootTable = new ResourceLocation($$0.getString(LOOT_TABLE_TAG));
-            this.lootTableSeed = $$0.getLong(LOOT_TABLE_SEED_TAG);
+    private boolean tryLoadLootTable(CompoundTag tag) {
+        if (tag.contains(LOOT_TABLE_TAG, 8)) {
+            this.lootTable = ResourceKey.create(Registries.LOOT_TABLE, ResourceLocation.parse(tag.getString("LootTable")));
+            this.lootTableSeed = tag.getLong(LOOT_TABLE_SEED_TAG);
             return true;
         } else {
             return false;
@@ -193,14 +197,17 @@ public class SuspiciousAncientSandBlockEntity extends BlockEntity {
     }
 
     @Override
-    public CompoundTag getUpdateTag() {
-        CompoundTag $$0 = super.getUpdateTag();
+    public @NotNull CompoundTag getUpdateTag(HolderLookup.@NotNull Provider $$0) {
+        CompoundTag $$1 = super.getUpdateTag($$0);
         if (this.hitDirection != null) {
-            $$0.putInt(HIT_DIRECTION_TAG, this.hitDirection.ordinal());
+            $$1.putInt(HIT_DIRECTION_TAG, this.hitDirection.ordinal());
         }
 
-        $$0.put(ITEM_TAG, this.item.save(new CompoundTag()));
-        return $$0;
+        if (!this.item.isEmpty()) {
+            $$1.put("item", this.item.save($$0));
+        }
+
+        return $$1;
     }
 
     public ClientboundBlockEntityDataPacket getUpdatePacket() {
@@ -208,9 +215,12 @@ public class SuspiciousAncientSandBlockEntity extends BlockEntity {
     }
 
     @Override
-    public void load(CompoundTag $$0) {
+    public void loadAdditional(@NotNull CompoundTag $$0, HolderLookup.@NotNull Provider $$1) {
+        super.loadAdditional($$0, $$1);
         if (!this.tryLoadLootTable($$0) && $$0.contains(ITEM_TAG)) {
-            this.item = ItemStack.of($$0.getCompound(ITEM_TAG));
+            this.item = ItemStack.parse($$1, $$0.getCompound(ITEM_TAG)).orElse(ItemStack.EMPTY);
+        } else {
+            this.item = ItemStack.EMPTY;
         }
 
         if ($$0.contains(HIT_DIRECTION_TAG)) {
@@ -219,13 +229,14 @@ public class SuspiciousAncientSandBlockEntity extends BlockEntity {
     }
 
     @Override
-    protected void saveAdditional(CompoundTag $$0) {
-        if (!this.trySaveLootTable($$0)) {
-            $$0.put(ITEM_TAG, this.item.save(new CompoundTag()));
+    protected void saveAdditional(@NotNull CompoundTag $$0, HolderLookup.@NotNull Provider $$1) {
+        super.saveAdditional($$0, $$1);
+        if (!this.trySaveLootTable($$0) && !this.item.isEmpty()) {
+            $$0.put(ITEM_TAG, this.item.save($$1));
         }
     }
 
-    public void setLootTable(ResourceLocation $$0, long $$1) {
+    public void setLootTable(ResourceKey<LootTable> $$0, long $$1) {
         this.lootTable = $$0;
         this.lootTableSeed = $$1;
     }
